--- a/QL_SinhVien_Hibernate_Feature2/.settings/org.eclipse.core.resources.prefs
+++ b/QL_SinhVien_Hibernate_Feature2/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/main/java/com/vanloi/model/StudentInfo.java=UTF-8
 encoding//src/main/resources/messages.properties=UTF-8
