--- a/QL_SinhVien_Hibernate_Feature2/src/main/webapp/WEB-INF/web.xml
+++ b/QL_SinhVien_Hibernate_Feature2/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,7 @@
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
+
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -33,5 +34,9 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/vanloi-servlet.xml</param-value>
 	</context-param>
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
 
 </web-app>
