--- a/QL_SinhVien_Hibernate_Feature2/src/main/webapp/WEB-INF/web.xml
+++ b/QL_SinhVien_Hibernate_Feature2/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,10 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
+	<context-param>
+		<param-name>defaultHtmlEscape</param-name>
+		<param-value>true</param-value>
+	</context-param>
 	<servlet>
 		<servlet-name>vanloi</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
